--- a/CustomLCDIndicator.csproj
+++ b/CustomLCDIndicator.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CPUUsage.cs" />
     <Compile Include="KS0066Converter.cs" />
     <Compile Include="LCD.cs" />
     <Compile Include="MainWindow.xaml.cs">
